# speech-text-api

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  tasks.py  worker.py
project/api/: rest.py
project/worker/: tasks.py  worker.py
