[project]
name = "speech-text-api"
version = "0.1.0"
description = "APIs for speech and text processing services"
authors = [
    {name = "Muhammad Rafid Amrullah",email = "rafid.tijarah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
